# entelligence-claude-code

./: .gitignore  .npmignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.claude/skills/entelligence-review/: SKILL.md
src/: index.ts
src/entelligence_pr_reviewer/: __init__.py  __main__.py  install_skill.py  server.py
